# SproutAI-Intelligent-Soil-Recognition-Crop-Recommendation

./: .gitattributes  README.md  app.py  custom.css  firebase-init.js  history.html  index.html  layout.html  models.py  package-lock.json  pyproject.toml  script.js  serviceAccountKey.json  soil_analyzer.py  view_analysis.html
